--- a/Shop/index.html
+++ b/Shop/index.html
@@ -165,20 +165,20 @@
     </div>
 
     <div class="frame">
-        <div class="container">
+        <div class="container frame__wrap">
 
             <div class="frame__left text">
                 <img class="frame__circle" src="img/circle__icon.png" alt="">
                 <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
             </div>
 
-            <!-- <div class="frame__right">
-                <p><span class="bolder">SUBSCRIBE</span> FOR OUR NEWLETTER AND PROMOTION</p>
+            <div class="frame__right text">
+                <p><span class="bolder">SUBSCRIBE</span> <br> FOR OUR NEWLETTER AND PROMOTION </p>
                 <div class="frame__right__input">
-                    <input type="email">
-                    <p></p>
+                    <input class="frame__input" type="email" placeholder="Enter Your Email">
+                    <button class="frame__btn">Subscribe</button>
                 </div>
-            </div> -->
+            </div> 
 
         </div>
     </div>
