--- a/Shop/index.html
+++ b/Shop/index.html
@@ -167,7 +167,7 @@
             </div>
     
             <article class="button">
-                <a class="btn text" href="#">Browse All Product</a>
+                <a class="btn text" href="index__catalog.html">Browse All Product</a>
             </article>
         </section>
     </main>
