--- a/Shop/product.html
+++ b/Shop/product.html
@@ -31,7 +31,7 @@
                     <img src="img/regist.png" alt="">
                 </a>
 
-                <a class="header__items" href="/">
+                <a class="header__items" href="cart.html">
                     <img src="img/cart.png" alt="">
                 </a>
             </div>
