--- a/Shop/index.html
+++ b/Shop/index.html
@@ -14,7 +14,7 @@
 
         <div class="container header__wrap">
             <div class="header__left">
-                <a class="header__logo" href="/">
+                <a class="header__logo" href="index.html">
                     <img src="img/logo.png" alt="">
                 </a>
                 <a href="/">
@@ -31,7 +31,7 @@
                     <img src="img/regist.png" alt="">
                 </a>
 
-                <a class="header__items" href="/">
+                <a class="header__items" href="cart.html">
                     <img src="img/cart.png" alt="">
                 </a>
             </div>
