--- a/Shop/cart.html
+++ b/Shop/cart.html
@@ -26,7 +26,7 @@
                     <img src="img/burger__menu.png" alt="">
                 </a>
 
-                <a class="header__items" href="/">
+                <a class="header__items" href="registration.html">
                     <img src="img/regist.png" alt="">
                 </a>
 
@@ -38,7 +38,7 @@
 
     </header>
 
-    <main>
+    <main class="cart">
         <section class="breadcrumb text">
             <article class="container breadcrumb__wrap">
                 <div class="breadcrumb__left">
