--- a/Shop/index.html
+++ b/Shop/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="sass/mainstyle.css">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                     <img src="img/burger__menu.png" alt="">
                 </a>
 
-                <a class="header__items" href="/">
+                <a class="header__items" href="registration.html">
                     <img src="img/regist.png" alt="">
                 </a>
 
