--- a/Shop/index__catalog.html
+++ b/Shop/index__catalog.html
@@ -25,7 +25,7 @@
                     <img src="img/burger__menu.png" alt="">
                 </a>
 
-                <a class="header__items" href="/">
+                <a class="header__items" href="registration.html">
                     <img src="img/regist.png" alt="">
                 </a>
 
