--- a/Shop/product.html
+++ b/Shop/product.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="sass/mainstyle.css">
     <script src="https://kit.fontawesome.com/2a89012097.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
