--- a/Shop/product.html
+++ b/Shop/product.html
@@ -255,10 +255,10 @@
                 </div>
     
                 <div class="social__icons">
-                    <img src="img/facebook.png" alt="">
-                    <img src="img/inst.png" alt="">
-                    <img src="img/pint.png" alt="">
-                    <img src="img/twi.png" alt="">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-twitter"></i>
                 </div>
             </div>
         </div>
