--- a/Shop/registration.html
+++ b/Shop/registration.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="sass/mainstyle.css">
+    <script src="https://kit.fontawesome.com/2a89012097.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -181,10 +182,10 @@
                 </div>
     
                 <div class="social__icons">
-                    <img src="img/facebook.png" alt="">
-                    <img src="img/inst.png" alt="">
-                    <img src="img/pint.png" alt="">
-                    <img src="img/twi.png" alt="">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-twitter"></i>
                 </div>
             </div>
         </div>
