--- a/Shop/cart.html
+++ b/Shop/cart.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="sass/mainstyle.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/2a89012097.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header text">
@@ -170,15 +171,15 @@
                     </div>
                 </div>
                 <div class="side__right">
-                    <article class="ship">
+                    <form class="ship">
                         <h3 class="ship__title">SHIPPING ADRESS</h3>
-                        <input type="country" placeholder="Bangladesh">
-                        <input type="state" placeholder="State">
-                        <input type="zip" placeholder="Postcode / Zip">
+                        <input type="country" required placeholder="Bangladesh">
+                        <input type="state" required  placeholder="State">
+                        <input type="zip" required placeholder="Postcode / Zip">
                         <button>
                             GET A QUOTE
                         </button>
-                    </article>
+                    </form>
                     <article class="checkout">
                         <div class="checkout__total">
                             <span>
@@ -227,10 +228,10 @@
                 </div>
     
                 <div class="social__icons">
-                    <img src="img/facebook.png" alt="">
-                    <img src="img/inst.png" alt="">
-                    <img src="img/pint.png" alt="">
-                    <img src="img/twi.png" alt="">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-twitter"></i>
                 </div>
             </div>
         </div>
