--- a/Shop/cart.html
+++ b/Shop/cart.html
@@ -114,9 +114,11 @@
             <div class="side">
                 <div class="side__left">
                     <article class="card">
-                        <div class="card__img">
+                        <picture class="card__img">
+                            <source media="(max-width: 450px)" width="144" height="188" srcset="img/product__man3.jpg" hidden>
                             <img src="img/product__man3.jpg" width="262" height="306" alt="/">
-                        </div>
+                        </picture>
+                        
                         <div class="card__side">
                             <div class="card__text">
                                 <h2>MANGO  PEOPLE <br>  T-SHIRT</h2>
@@ -138,9 +140,10 @@
                        
                     </article>
                     <article class="card">
-                        <div class="card__img">
+                        <picture class="card__img">
+                            <source media="(max-width: 450px)" width="144" height="188" srcset="img/product__man2__cat.jpg" hidden>
                             <img src="img/product__man2.jpg" width="262" height="306" alt="/">
-                        </div>
+                        </picture>
                         <div class="card__side">
                             <div class="card__text">
                                 <h2>MANGO  PEOPLE <br>  T-SHIRT</h2>
