--- a/Shop/product.html
+++ b/Shop/product.html
@@ -118,7 +118,6 @@
         </section>
 
         <section class="slider">
-            <img class="slider__img" src="img/product__1.png" alt="">
             <button class="slider__btn slider__btn__left">
                 <i class="fas fa-angle-left"></i>
             </button>
@@ -177,7 +176,9 @@
                         </div>
                     </div>
                     <div class="catalog__items__card__text">
-                        <h3>ELLERY X M'O CAPSULE</h3>
+                        <a href="product.html">
+                            ELLERY X M'O CAPSULE
+                        </a>
                         <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                         <span class="decor__product">$52.00</span>
                     </div>
@@ -197,7 +198,9 @@
                         </div>
                     </div>
                     <div class="catalog__items__card__text">
-                        <h3>ELLERY X M'O CAPSULE</h3>
+                        <a href="product.html">
+                            ELLERY X M'O CAPSULE
+                        </a>
                         <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                         <span class="decor__product">$52.00</span>
                     </div>
@@ -217,7 +220,9 @@
                         </div>
                     </div>
                     <div class="catalog__items__card__text">
-                        <h3>ELLERY X M'O CAPSULE</h3>
+                        <a href="product.html">
+                            ELLERY X M'O CAPSULE
+                        </a>
                         <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                         <span class="decor__product">$52.00</span>
                     </div>
