changes in sort

--- a/Shop/index__catalog.html
+++ b/Shop/index__catalog.html
@@ -176,7 +176,7 @@
                                 <span class="sort__text">SIZE</span>
                                 <img class="sort__img" src="img/selection.png" alt="">
                             </summary>
-                            <form action="" class="sort__size__checkbox">
+                            <form action="#" class="sort__size__checkbox">
                                 <label for="size-xs">
                                     <input id="size-xs" type="checkbox"> XS
                                 </label>
